gateway/1.10/modules/ROOT/pages/policies-outbound-directory.adoc
= Outbound Policies Directory
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images

== Outbound Policies Included in Flex Gateway


[%header%autowidth.spread]
|===
|Policy |Category |Summary
| xref:policies-outbound-aws-lambda.adoc[AWS lambda] | Transformation | Triggers an AWS Lambda function from a standard HTTP request
| xref:policies-outbound-circuit-breaker.adoc[Circuit Breaker] | Quality of Service | Prevents an upstream from receiving too many requests or connections
| xref:policies-outbound-basic-auth.adoc[Credential Injection Basic Authentication] | Security | Allows access based on the basic authorization mechanism, with a single user-password
| xref:policies-outbound-api-key.adoc[Credential Injection API Key] | Security | Injects an API key or client credentials headers into outgoing requests
| xref:policies-outbound-oauth.adoc[Credential Injection OAuth 2.0] | Security | Adds headers to a request or a response
| xref:policies-outbound-upstream-idle-timeout.adoc[Upstream Idle Timeout] | Quality of Service | Sets the maximum idle duration for a stream between Flex Gateway and an upstream service
|===

== See Also

* xref:policies::policies-availability-by-gateway.adoc[Policy Availability by Gateway]