gateway/1.12/modules/ROOT/pages/policies-outbound-directory.adoc
= Outbound Policies Directory
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images

== Outbound Policies Included in Flex Gateway


[%header%autowidth.spread]
|===
|Policy |Category |Summary
| xref:policies-outbound-a2a-intask-authorization-code.adoc[A2A In-Task Authorization Code] | A2A | Ensures secondary credentials are present for in-task authentication using OAuth 2.0 Authorization Code flow
| xref:policies-outbound-aws-lambda.adoc[AWS lambda] | Transformation | Triggers an AWS Lambda function from a standard HTTP request
| xref:policies-outbound-aws-signature.adoc[AWS Request Signature] | Security | Signs outgoing requests with AWS Signature Version 4 (SigV4) or Signature Version 4A (SigV4A)
| xref:policies-outbound-circuit-breaker.adoc[Circuit Breaker] | Quality of Service | Prevents an upstream from receiving too many requests or connections
| xref:policies-outbound-basic-auth.adoc[Credential Injection Basic Authentication] | Security | Allows access based on the basic authorization mechanism, with a single user-password
| xref:policies-outbound-api-key.adoc[Credential Injection API Key] | Security | Injects an API key or client credentials headers into outgoing requests
| xref:policies-outbound-oauth.adoc[Credential Injection OAuth 2.0] | Security | Injects an OAuth 2.0 authorization header into outgoing requests
| xref:policies-outbound-jwt-generation.adoc[Credential Injection JWT Generation] | Security | Generates and injects a JWT token into outgoing requests
| xref:policies-outbound-oauth-obo.adoc[OAuth 2.0 OBO Credential Injection] | Security | Exchanges incoming bearer tokens using OAuth 2.0 Token Exchange (RFC 8693), Microsoft Entra ID On-Behalf-Of, or OAuth 2.0 Token Exchange with CIBA
| xref:policies-outbound-message-logging.adoc[Outbound Message Logging] | Troubleshooting | Logs custom messages from outbound requests sent to upstream services, responses from upstream services, or information from other outbound policies applied to the same upstream service
| xref:policies-included-tls-outbound.adoc[Transport Layer Security (TLS) - Outbound] | Security | Enables two-way authentication between the API proxy and an upstream service
| xref:policies-outbound-upstream-idle-timeout.adoc[Upstream Idle Timeout] | Quality of Service | Sets the maximum idle duration for a stream between Flex Gateway and an upstream service
|===

== See Also

* xref:gateway-home::index.adoc#policy-availability-by-gateway[Policy Availability by Gateway]
